# BaseSixFour

./: .gitignore  BaseSixFour.cbp  BaseSixFour.pro  BaseSixFourTests.pro  CMakeLists.txt
docs/: Doxyfile
include/: BaseSixFour.h  BasesSixFour.h  basesixfour.h
src/: BaseSixFour.cpp  basesixfour.cpp
tests/: BaseSixFourTests.cpp
